<resources>
    <string name="app_name">Disaster App</string>
    <string name="example">This is text %1$d</string>
    <string name="example_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="example_src">Source name</string>
    <string name="rv_disaster_title">Latest Disaster Information </string>
    <string name="item_disaster_created_at">Created at %1$s</string>
    <string name="item_disaster_empty_title">Unknown Title</string>
    <string name="item_disaster_empty_desc">There is no description provided</string>
    <string name="iv_item_disaster">Item Disaster Image</string>
    <string name="close">Close</string>
    <string name="flood">Flood</string>
    <string name="earthquake">Earthquake</string>
    <string name="fire">Fire</string>
    <string name="haze">Haze</string>
    <string name="wind">Wind</string>
    <string name="volcano">Volcano</string>
    <string name="no_type">Type not listed</string>
    <string name="searchbar_hint">Find location</string>
    <string name="notification">Notification</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_desc">Enable dark mode theme</string>
    <string-array name="disaster_types">
        <item>@string/flood</item>
        <item>@string/earthquake</item>
        <item>@string/fire</item>
        <item>@string/haze</item>
        <item>@string/wind</item>
        <item>@string/volcano</item>
    </string-array>
    <string name="success_load_data">Successfully load data</string>
    <string name="empty_disaster_data">No disaster is found</string>
    <string name="empty_area_data">No area is found. Please type another keyword</string>
    <string name="water_level_alert">Water Level is High</string>
    <string name="water_level_alert_desc">Current water level is high, please evacuate</string>
</resources>